# shllm

./: .gitignore  README.md  pyproject.toml  shll  shll.py  shllm.py  test.py  test_shll.py  test_shllm.py
.github/workflows/: shll.yml  shllm.yml
